--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.2.0",
-    "react-router-dom": "^6.9.0",
-    "three-dots": "^0.3.2"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.2.0"
   }
 }
